# pyfly

./: .coveragerc  .dockerignore  .flake8  .flaskenv  .gitignore  .travis.yml  ChangeLog.md  Dockerfile  Makefile  README.md  app.py  cookiecutter-options.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
application/: __init__.py
application/commons/: __init__.py  apispec.py  pagination.py
application/config/: settings.yaml
application/controller/: __init__.py
application/controller/auth/: __init__.py  auth.py
application/dao/: __init__.py
application/dao/auth/: __init__.py  auth.py  helper.py
application/extensions/: __init__.py  init_apispec.py  init_bcrypt.py  init_cli.py  init_dynaconf.py  init_jwt.py  init_logger.py  init_marshmallow.py  init_migrate.py  init_sqlalchemy.py
application/libs/: __init__.py
application/libs/flask_logger/: __init__.py  format.py  logger.py  macro.py
application/models/: __init__.py  blocklist.py  user.py
application/resources/: __init__.py  user.py
application/schemas/: __init__.py  user.py
application/script/: __init__.py  cmdline.py
application/utils/: __init__.py
application/utils/error/: __init__.py  exceptions.py  handler.py
application/utils/loader/: __init__.py  consul_loader.py
application/utils/response/: __init__.py  response.py
application/views/: __init__.py
application/views/api/: __init__.py  api.py
application/views/auth/: __init__.py  auth.py
migrations/versions/: d13a784404f4_.py
templates/: redoc.j2  swagger.j2
tests/: __init__.py  test_auth.py  test_version.py
