[tool.poetry]
name = "application"
version = "0.1.0"
description = "BBS"
authors = ["StudentCWZ <StudentCWZ@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.2.5"
flask-sqlalchemy = "^3.0.5"
flask-bcrypt = "^1.0.1"
flask-marshmallow = "^0.15.0"
flask-jwt-extended = "^4.5.2"
dynaconf = "^3.1.12"
python-dotenv = "^1.0.0"
pymysql = "^1.1.0"
apispec = "^6.3.0"
apispec-webframeworks = "^0.5.2"
flask-restful = "^0.3.10"
flask-migrate = "^4.0.4"
marshmallow-sqlalchemy = "^0.29.0"
flask-loguru = "^1.0.0"
python-consul = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
tox = "^4.5.2"
mkdocs = "^1.4.3"
mkdocs-material = "^8.5.11"
pytest-pylint = "^0.19.0"
pre-commit = "^3.3.2"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "tests.py test_*.py *_tests.py"

[tool.pylint.design]
max-line-length = 120

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "default"

